# CoPaw

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  CONTRIBUTING_zh.md  LICENSE  README.md  README_zh.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  search-index.json  site.config.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: _baseUniq-BbEuTy6i.js  _baseUniq-QJOyriTt.js  arc-C0PMt2VN.js  arc-DYLEev30.js  architectureDiagram-VXUJARFQ-BDver6lz.js  architectureDiagram-VXUJARFQ-PG1yvNk2.js  blockDiagram-VD42YOAC-BI79LblA.js  blockDiagram-VD42YOAC-m3rgOcl2.js  c4Diagram-YG6GDRKO-BgrXZGA5.js  c4Diagram-YG6GDRKO-OokT-G-6.js  channel-C1iMs7kl.js  channel-DVmyaCSn.js  chunk-4BX2VUAB-BJvuhWkF.js  chunk-4BX2VUAB-Cs8w5-l2.js  chunk-55IACEB6-B6DqNQMF.js  chunk-55IACEB6-CF-O3l4h.js  chunk-B4BG7PRW-C7IwDX52.js  chunk-B4BG7PRW-DTbBIXRT.js  chunk-DI55MBZ5-0_nUA1ji.js  chunk-DI55MBZ5-Cf-bhc7q.js  chunk-FMBD7UC4-D62IpGjr.js  chunk-FMBD7UC4-DnEARQ9t.js  chunk-QN33PNHL-CyZkE8Uj.js  chunk-QN33PNHL-DaiMhNon.js  chunk-QZHKN3VN-DINnoWZ_.js  chunk-QZHKN3VN-WIiq2MoX.js  chunk-TZMSLE5B-BslvH4kK.js  chunk-TZMSLE5B-Tks6nUJ_.js  classDiagram-2ON5EDUG-Gzp0gKXP.js  classDiagram-2ON5EDUG-Ok46359f.js  clone-C_igUlM6.js  clone-DCLIdvKD.js  cose-bilkent-S5V4N54A-B58n0edM.js  cose-bilkent-S5V4N54A-D-Rv4v9_.js  dagre-6UL2VRFP-C4MOF6Ya.js  dagre-6UL2VRFP-CmbiRjB5.js  diagram-PSM6KHXK-BIy8RpNV.js  diagram-PSM6KHXK-CTJ8mRmE.js  diagram-QEK2KX5R-26mRvk-I.js  diagram-QEK2KX5R-EwRY18Ag.js  (+50 more)
console/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
deploy/: Dockerfile  Dockerfile_ms
docs/: channels.en.md  channels.zh.md  cli.zh.md  commands.en.md  commands.zh.md  community.zh.md  compact.en.md  compact.zh.md  comparison.en.md  comparison.zh.md  config.en.md  config.zh.md  console.en.md  console.zh.md  contributing.en.md  faq.en.md  faq.zh.md  heartbeat.en.md  heartbeat.zh.md  mcp.en.md  mcp.zh.md  memory.en.md  quickstart.en.md  quickstart.zh.md
scripts/: README.md  docker_build.sh  install.ps1  website_build.sh  wheel_build.sh
(+311 files in other folders)
